name:                plur
version:             0.1.0.0
synopsis:            Plurality monad: Zero, one, or at least two.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
copyright:           (c) 2018 Joel Burget
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:
    GHC == 7.0.4
  , GHC == 7.2.2
  , GHC == 7.4.2
  , GHC == 7.6.3
  , GHC == 7.8.4
  , GHC == 7.10.3
  , GHC == 8.0.2
  , GHC == 8.2.2
  , GHC == 8.4.2

library
  exposed-modules:     Data.Plur
  build-depends:
    base >=4.11 && <4.12,
    semigroups >= 0.18
  hs-source-dirs:      src
  default-language:    Haskell2010
